--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">GITEI</a>
+    <a class="navbar-brand" routerLink="/">GITEI</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,10 +8,15 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/persons">Personas</a>
+          <a class="nav-link" routerLink="/persons/add" routerLinkActive="active">
+            <i class="fas fa-users"></i>
+            <span class="pl-2">Agregar Persona</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/persons/add">Agregar Persona</a>
+          <a class="nav-link" routerLink="/persons" routerLinkActive="active">
+            <i class="fas fa-users"></i>
+            <span class="pl-2">Personas</span>
+          </a>
         </li>
       </ul>
     </div>
