--- a/client/src/app/components/person-form/person-form.component.html
+++ b/client/src/app/components/person-form/person-form.component.html
@@ -1,1 +1,62 @@
-<p>person-form works!</p>
+<div class="row py-3 d-flex justify-content-center">
+  <h2>Agregar Persona</h2>
+</div>
+<div class="row py-1 d-flex justify-content-center">
+  <p>En esta sección puede guadar usuarios y ver en tiempo real la información que será guardada.</p>
+</div>
+<div class="row d-flex justify-content-around align-items-center">
+  <div class="col-md-4">
+    <div class="card border-0">
+      <div class="card-body">
+        <form>
+          <div class="pb-2">
+            Nombre
+          </div>
+          <div class="form-group">
+            <input type="text" name="name" [(ngModel)]="persona.nombre" placeholder="Ingrese el nombre de la persona"
+              class="form-control" autofocus>
+          </div>
+          <div class="pb-2">
+            Apellido
+          </div>
+          <div class="form-group">
+            <input type="text" name="lastname" [(ngModel)]="persona.apellido"
+              placeholder="Ingrese el apellido de la persona" class="form-control">
+          </div>
+          <div class="pb-2">
+            Cedula
+          </div>
+          <div class="form-group">
+            <input type="number" name="document" [(ngModel)]="persona.cedula" placeholder="Ingrese la cedula"
+              class="form-control">
+          </div>
+          <button class="btn btn-success btn-block p-2" (click)="savePerson()">Guardar usuario</button>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="card" style="height: 300px;">
+      <div class="card-head py-3">
+        <h3 class="text-center">
+          {{persona.nombre}} {{persona.apellido}}
+        </h3>
+      </div>
+      <div class="card-body p-0">
+        <div class="row d-flex justify-content-center align-items-center">
+          <img style="height: 150px; width:150px;" src="https://img.icons8.com/bubbles/2x/user.png" class="card-img-top"
+            alt="">
+        </div>
+        <div class="row d-flex justify-content-center subCedula">
+          <p *ngIf="persona.cedula">Cedula: {{persona.cedula}} </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row d-flex justify-content-center">
+  <a routerLink="/persons" class="btn btn-info d-flex justify-content-center align-items-center">
+    <i class="far fa-eye fa-2x"></i>
+    <span class="ml-3 ">Ver listado de personas agregadas</span>
+  </a>
+</div>
