--- a/client/src/app/components/persons-list/persons-list.component.html
+++ b/client/src/app/components/persons-list/persons-list.component.html
@@ -1,24 +1,32 @@
-<div class="container d-flex justify-content-center">
-  <div class="col-md-4" *ngFor="let person of persons">
-    <div class="car text-center" style="background-color: cadetblue;">
-      <div class="card-header d-flex justify-content-between align-items-center bg-dark text-white">
-        <p class="subName">{{person.nombre}} {{person.apellido}}</p>
-        <button class="btn btn-danger">
-          <i class="far fa-trash-alt"></i>
-        </button>
-      </div>
-      <div class="card-body">
-        <div class="col">
-          <div class="row">
-            <img src="https://img.icons8.com/bubbles/2x/user.png" class="card-img-top" alt="">
-          </div>
-          <div class="row d-flex justify-content-center py-2">
-            Cedula: {{person.cedula}}
-          </div>
-          <div class="row  d-flex justify-content-center">
-            <a href="" class="btn btn-info">
-              Editar usuario
-            </a>
+<div class="row d-flex justify-content-center">
+  <div class="row d-flex justify-content-center mb-4">
+    <a routerLink="/persons/add" class="btn btn-success d-flex justify-content-center align-items-center">
+      <i class="fas fa-plus-circle fa-2x"></i>
+      <span class="ml-3 ">Agregar nuevo usuario</span>
+    </a>
+  </div>
+  <div class="row">
+    <div class="col-md-4" *ngFor="let person of persons">
+      <div class="card text-center my-2" style="background-color: cadetblue;">
+        <div class="card-header d-flex justify-content-between align-items-center bg-dark text-white">
+          <p class="subName">{{person.nombre}} {{person.apellido}}</p>
+          <button class="btn btn-danger">
+            <i class="far fa-trash-alt"></i>
+          </button>
+        </div>
+        <div class="card-body">
+          <div class="col">
+            <div class="row">
+              <img src="https://img.icons8.com/bubbles/2x/user.png" class="card-img-top" alt="">
+            </div>
+            <div class="row d-flex justify-content-center py-2">
+              Cedula: {{person.cedula}}
+            </div>
+            <div class="row  d-flex justify-content-center">
+              <a href="" class="btn btn-info">
+                Editar usuario
+              </a>
+            </div>
           </div>
         </div>
       </div>
