--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary p-2">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">GITEI</a>
+    <a class="navbar-brand" routerLink="/">
+      <img src="http://gitei.unal.edu.co/web-gitei/wp-content/themes/web-gitei/myWeb/img/logo_separator.png" alt="" class="logo">
+    </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,12 +11,12 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/persons/add" routerLinkActive="active">
-            <i class="fas fa-users"></i>
+            <i class="fas fa-plus-circle fa-2x"></i>
             <span class="pl-2">Agregar Persona</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/persons" routerLinkActive="active">
-            <i class="fas fa-users"></i>
+          <a class="nav-link" routerLink="/persons">
+            <i class="fas fa-users fa-2x"></i>
             <span class="pl-2">Personas</span>
           </a>
         </li>
