--- a/client/src/app/components/persons-list/persons-list.component.html
+++ b/client/src/app/components/persons-list/persons-list.component.html
@@ -1,17 +1,16 @@
 <div class="row d-flex justify-content-center">
-  <div class="row d-flex justify-content-center mb-4">
+  <div class="col-md-12 d-flex justify-content-center mb-4">
     <a routerLink="/persons/add" class="btn btn-success d-flex justify-content-center align-items-center">
       <i class="fas fa-plus-circle fa-2x"></i>
       <span class="ml-3 ">Agregar nuevo usuario</span>
     </a>
   </div>
-  <div class="row">
     <div class="col-md-4" *ngFor="let person of persons">
       <div class="card text-center my-2" style="background-color: cadetblue;">
         <div class="card-header d-flex justify-content-between align-items-center bg-dark text-white">
           <p class="subName">{{person.nombre}} {{person.apellido}}</p>
-          <button class="btn btn-danger">
-            <i class="far fa-trash-alt"></i>
+          <button class="btn btn-danger" (click)="deletePerson(person.id)">
+            <i class="far fa-trash-alt fa-2x"></i>
           </button>
         </div>
         <div class="card-body">
@@ -23,7 +22,7 @@
               Cedula: {{person.cedula}}
             </div>
             <div class="row  d-flex justify-content-center">
-              <a href="" class="btn btn-info">
+              <a [routerLink]="['/persons/edit/', person.id]" class="btn btn-info">
                 Editar usuario
               </a>
             </div>
@@ -31,5 +30,4 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
